# CollegeProgramming

./: README.md  pyproject.toml
Code/: OOP.ipynb
Code/Arkhipov/: test.py
Code/Arkhipov/2.3.3/: Ex 1.py  Ex 2.py  Ex 3.py  Ex 4.py  Ex 5.py
Code/Arkhipov/2.3.4/: Ex 10.py  Ex 6.py  Ex 7.py  Ex 8.py  Ex 9.py
Code/Arkhipov/2.4.2/: Ex 1.py  Ex 2.py  Ex 3.py  Ex 4.py  Ex 5(Keyboard).py  Ex 5(Main).py
Code/Arkhipov/2.4.3/: Ex 10.py  Ex 6.py  Ex 7.py  Ex 8.py  Ex 9.py
Code/Arkhipov/2.4.4/: Ex 11.py  Ex 12.py  Ex 13.py  Ex 14.py  Ex 15.py
Code/Arkhipov/2.5.2/: Ex 1.py  Ex 2.py  Ex 3.py  Ex 4.py  Ex 5.py
Code/Arkhipov/2.5.3/: Ex10.py  Ex6.py  Ex7.py  Ex8.py  Ex9.py
Code/Arkhipov/2.6.2/: Ex 1.py  Ex 2.py  Ex 3.py  Ex 4.py  Ex 5.py
Code/Arkhipov/2.6.3/: Ex 10.py  Ex 6.py  Ex 7.py  Ex 8.py  Ex 9.py
Code/Arkhipov/3.1.2 - 3.1.5/: Ex 1.py  Ex 10.py  Ex 11.py  Ex 12.py  Ex 13.py  Ex 14.py  Ex 15.py  Ex 16.py  Ex 17.py  Ex 18.py  Ex 19.py  Ex 2.py  Ex 20.py  Ex 3.py  Ex 4.py  Ex 5.py  Ex 6.py  Ex 7.py  Ex 8.py  Ex 9.py  F1_20.py
Code/Arkhipov/3.2.2/: Ex1.py  Ex2.py  Ex3.py  Ex4.py  Ex5.py  New String.txt
Code/Arkhipov/3.2.3/: Ex10.py  Ex6.py  Ex7.py  Ex8.py  Ex9.py
Code/Arkhipov/3.2.4/: Ex11.py  Ex12.py  Ex13.py  Ex14.py  Ex15.py
Code/Arkhipov/4.1.2 - 4.1.4/: Ex 1.py  Ex 2.py  Ex 3.py  Ex 4.py  Ex 5.py  Ex 9.py  OPT_Ex 10.py  OPT_Ex 11.py
Code/Arkhipov/File/: Ex1.py  Ex1.txt  Ex10.py  Ex10.txt  Ex10NEW.txt  Ex11.py  Ex12.py  (+31 more)
Code/Mods/: CopyPaste.py  Enumerate lines.py  Keyboard.ipynb  NumPy.ipynb  custom_assertions.py  test.py
Schematics/OOP/: Ex 1.drawio
(+106 files in other folders)
