[project]
name = "collegeprogramming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cbrapi>=0.1.6",
    "numpy>=2.4.2",
    "pandas>=2.0,<3.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.2",
]
